--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    
+    <h1>This is page 1</h1>
+    <p><a href="pageTwo.html">Go to Page Two</a></p>
+    <p>Use the form below to make a Pizza order. After you submit the Pizza form, its name will appear in the list below.</p>
+    <p>Once you have made a few Pizzas, navigate to Page Two and click the button to see your Pizza list on that page.</p>
+
+    <form>
+      <fieldset>
+        <legend>This is the Pizza Form</legend>
+        <label>Name your new Pizza:
+          <input type="text" name="pizzaInput" required  />
+        </label>
+        <button type="submit">Submit you new Pizza!</button>
+      </fieldset>
+    </form>
    
+    <h2>The Pizza List</h2>
+    <ul id="pizzaList"></ul>
     
-    <script src="" ></script>
+    <script src="js/app.js" ></script>
+    <script src="js/appOne.js" ></script>
   </body>
 </html>
