add page two html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="images/New-York-Pizza.jpg"/>
+
   </head>
   <body id="one">
     <h1>This is page 1</h1>
