add constructor and event function handler to app.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Use the form below to make a Pizza order. After you submit the Pizza form, its name will appear in the list below.</p>
     <p>Once you have made a few Pizzas, navigate to Page Two and click the button to see your Pizza list on that page.</p>
 
-    <form>
+    <form id="pizzaForm">
       <fieldset>
         <legend>This is the Pizza Form</legend>
         <label>Name your new Pizza:
