--- a/pageTwo.html
+++ b/pageTwo.html
@@ -19,7 +19,7 @@
    
     <ul id="pizzaList"></ul>
     
-    <script src="js/app.js" ></script>
-    <script src="js/appTwo.js" ></script>
+    <!-- <script src="js/app.js" ></script>
+    <script src="js/appTwo.js" ></script> -->
   </body>
 </html>
